--- a/views/collect.ejs
+++ b/views/collect.ejs
@@ -1,5 +1,43 @@
 
+<link rel="stylesheet" href="/jwysiwyg/jquery.wysiwyg.css" type="text/css" />
+<script type="text/javascript" src="jwysiwyg/jquery.wysiwyg.js"></script>
 
+<script>
+    $(function() {
+    	//
+    	// Intialize GUI
+    	//
+        $('#wysiwyg').wysiwyg();
+		  
+		  //
+		  // Intialize Events
+		  //
+		  
+		  $('#add-question').click(function() {
+				var question = $('#wysiwyg').val();
+				
+				$.ajax({
+					type: "POST",
+					url: "/collect/question",
+					data: JSON.stringify({question: question}),
+					contentType: "application/json; charset=utf-8",
+					dataType: "json",
+					success: function(data) {
+						alert("question added...");
+					},
+					error: function(err) {
+						var msg = 'Status: ' + err.status + ': ' + err.responseText;
+						alert(msg);
+					}
+				});
+				return false;
+			});
+		  
+		  // Init focus for page
+		  // $('#wysiwyg').wysiwyg('focus'); does not work
+		  $("#wysiwygIFrame")[0].contentWindow.focus();
+    });
+</script>
    
 <h3>Question</h3>
 <div>
@@ -9,57 +47,7 @@
 <h3>Answer</h3>
 <h3>Area</h3>
 <h3>Area</h3>
+<a id="add-question" href="#">Submit Question</a>
 
 
- <script>
-    $(function() {
-        $('#wysiwyg').wysiwyg({
-		    controls: {
-		      strikeThrough : { visible : true },
-		      underline     : { visible : true },
-		      
-		      separator00 : { visible : true },
-		      
-		      justifyLeft   : { visible : true },
-		      justifyCenter : { visible : true },
-		      justifyRight  : { visible : true },
-		      justifyFull   : { visible : true },
-		      
-		      separator01 : { visible : true },
-		      
-		      indent  : { visible : true },
-		      outdent : { visible : true },
-		      
-		      separator02 : { visible : true },
-		      
-		      subscript   : { visible : true },
-		      superscript : { visible : true },
-		      
-		      separator03 : { visible : true },
-		      
-		      undo : { visible : true },
-		      redo : { visible : true },
-		      
-		      separator04 : { visible : true },
-		      
-		      insertOrderedList    : { visible : true },
-		      insertUnorderedList  : { visible : true },
-		      insertHorizontalRule : { visible : true },
-		      
-		      h4mozilla : { visible : true && $.browser.mozilla, className : 'h4', command : 'heading', arguments : ['h4'], tags : ['h4'], tooltip : "Header 4" },
-		      h5mozilla : { visible : true && $.browser.mozilla, className : 'h5', command : 'heading', arguments : ['h5'], tags : ['h5'], tooltip : "Header 5" },
-		      h6mozilla : { visible : true && $.browser.mozilla, className : 'h6', command : 'heading', arguments : ['h6'], tags : ['h6'], tooltip : "Header 6" },
-		      
-		      h4 : { visible : true && !( $.browser.mozilla ), className : 'h4', command : 'formatBlock', arguments : ['<H4>'], tags : ['h4'], tooltip : "Header 4" },
-		      h5 : { visible : true && !( $.browser.mozilla ), className : 'h5', command : 'formatBlock', arguments : ['<H5>'], tags : ['h5'], tooltip : "Header 5" },
-		      h6 : { visible : true && !( $.browser.mozilla ), className : 'h6', command : 'formatBlock', arguments : ['<H6>'], tags : ['h6'], tooltip : "Header 6" },
-		      
-		      separator07 : { visible : true },
-		      
-		      cut   : { visible : true },
-		      copy  : { visible : true },
-		      paste : { visible : true }
-		    }
-		  });
-    });
-</script>
+
