--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,10 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/ui/themes/base/jquery-ui.css'>
-    <link rel="stylesheet" href="/jwysiwyg/jquery.wysiwyg.css" type="text/css" />
 
 
     <script type="text/javascript" src="javascripts/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="ui/jquery-ui-1.9.1.custom.min.js"></script>
-	<script type="text/javascript" src="jwysiwyg/jquery.wysiwyg.js"></script>
 
     <script>
 	    $(function() {
@@ -30,7 +28,7 @@
     <h1><%= title %></h1>
     <div id="tabs">
 	    <ul>
-	        <li><a href="collect">Collect Questions</a></li>
+	        <li><a href="/collect">Collect Questions</a></li>
 	        <li><a href="ajax/content2.html">Questionnaires</a></li>
 	        <li><a href="ajax/content3-slow.php">Administration</a></li>
 	    </ul>
