--- a/views/collect.ejs
+++ b/views/collect.ejs
@@ -10,15 +10,36 @@
 </style>
 <script>
 
+	function addPlusToLastOption(){
+		var lastInput = null;
+		$("#addAnswertOption").remove();
+		
+		$(':input', '#answerTypeDiv').each(function() {
+            lastInput = this;
+        });
+        
+        if(lastInput!=null) {
+        	$(lastInput).after("<a id='addAnswertOption' href='#'>Add Option</a>");	
+        } 
+        
+        $("#addAnswertOption").click(addAnswerOption);
+        return false;
+	}
+	
+	function addAnswerOption(){
+		$('#answerTypeDiv').append('Option: <input id="answerOption"/><br/>');
+		addPlusToLastOption();
+	}
+
 	function updateAnswerType() {
 		var answerType = $('#answerType').val();
 		if(answerType == "Text") {
 			$('#answerTypeDiv').html("<i>A text area will be displayed in the questionnaire.</i>");	
 		} else if(answerType == "Multiple Choice") {
-			$('#answerTypeDiv').html("oops 1");
-		} else if(answerType == "Checkboxes") {
-			$('#answerTypeDiv').html("oops 2");
-		}
+			$('#answerTypeDiv').html("");
+			addAnswerOption();
+			
+		} 
 	}
 	
 	function focusQuestionField(){
@@ -75,12 +96,31 @@
 			<select id="answerType" onchange="updateAnswerType()">
 				<option>Text</option>
 				<option>Multiple Choice</option>
-				<option>Checkboxes</option>
 			</select>
 			<br/><br/>
-			<div id="answerTypeDiv">
-				
-			</div>
+			<div id="answerTypeDiv"></div>
+		</td>
+	</tr>
+	<tr>
+		<td class="question-label"><b>Area</b></td>
+		<td>
+			<select id="answerType" onchange="updateAnswerType()">
+				<option>General Programming</option>
+				<option>Desktop Development</option>
+				<option>Web Development</option>
+				<option>Mobile Development</option>
+				<option>Database</option>
+			</select>
+		</td>
+	</tr>
+	<tr>
+		<td class="question-label"><b>Level</b></td>
+		<td>
+			<select id="answerType" onchange="updateAnswerType()">
+				<option>Basic</option>
+				<option>Intermediate</option>
+				<option>Advanced</option>
+			</select>
 		</td>
 	</tr>
 </table>
