now update operation is working.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
     <h1><%= title %></h1>
     <div id="tabs">
 	    <ul>
-	        <li><a href="/collect">Collect Questions</a></li>
+	        <li><a href="/questions/edit">Collect Questions</a></li>
 	        <li><a href="ajax/content2.html">Questionnaires</a></li>
 	        <li><a href="ajax/content3-slow.php">Administration</a></li>
 	    </ul>
