now it is possible to update a question.

--- a/views/question-edit.ejs
+++ b/views/question-edit.ejs
@@ -35,7 +35,7 @@
 			<label><input type="radio" value="Multiple Choice" name="questionType" id="questionType" onchange="updateQuestionType()">Multiple Choice</label>
 			<br/><br/>
 			<div id="answerTextTypeDiv" style="visibility: false">
-				<textarea rows='3' cols='103' disabled='true'>To be filled by the applicant.</textarea><br/>
+				<textarea rows='3' cols='103' disabled="true">To be filled by the applicant.</textarea><br/>
 				<textarea name='textAnswer' id='textAnswer' rows='5' cols='103'></textarea>
 			</div>
 			<div id="answerMultipleChoiseTypeDiv" style="visibility: false"></div>
