Added authors fields.

--- a/views/question-edit.ejs
+++ b/views/question-edit.ejs
@@ -36,6 +36,7 @@
 			<br/><br/>
 			<div id="answerTextTypeDiv" style="visibility: false">
 				<textarea rows='3' cols='103' disabled="true">To be filled by the applicant.</textarea><br/>
+				The Answer:<br/>
 				<textarea name='textAnswer' id='textAnswer' rows='5' cols='103'></textarea>
 			</div>
 			<div id="answerMultipleChoiseTypeDiv" style="visibility: false"></div>
@@ -61,6 +62,12 @@
 				<option>Intermediate</option>
 				<option>Advanced</option>
 			</select>
+		</td>
+	</tr>
+	<tr>
+		<td class="question-label"><b>Author</b></td>
+		<td>
+			<input id="author" name="author"/>
 		</td>
 	</tr>
 </table>
