now storing level, area and author.

--- a/views/question-edit.ejs
+++ b/views/question-edit.ejs
@@ -67,7 +67,7 @@
 	<tr>
 		<td class="question-label"><b>Author</b></td>
 		<td>
-			<input id="author" name="author"/>
+			<input id="questionAuthor" name="questionAuthor"/>
 		</td>
 	</tr>
 </table>
