Now we are able to star reading/updating a question.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
     <h1><%= title %></h1>
     <div id="tabs">
 	    <ul>
-	        <li><a href="/questions/edit">Collect Questions</a></li>
+	        <li><a href="/questions/edit">Questions</a></li>
 	        <li><a href="ajax/content2.html">Questionnaires</a></li>
 	    </ul>
 	</div>
