now we are able to edit multiple choice fields.

--- a/views/question-edit.ejs
+++ b/views/question-edit.ejs
@@ -10,6 +10,7 @@
 	}
 </style>
 <script type="text/javascript" src="javascripts/question-edit.js"> </script>
+<a href="/">Add New Question</a><br/><br/>
 <table>
 	<tr>
 		<td class="question-label"><b>Id</b></td>
